pricing table fist column alignment fix (#47)

--- a/static/assets/sass/base/_base.scss
+++ b/static/assets/sass/base/_base.scss
@@ -1019,7 +1019,7 @@ p.spam-message {
   padding-top: 5px;
 }
 .single-pricing-table.details .pricing-body ul li:first-child {
-  padding: 5px;
+  padding: 5px 20px;
 }
 .single-pricing-table.free,
 .single-pricing-table.silver,
